updating index file

--- a/data_loaders/PanCanDSASlideSync.ipynb
+++ b/data_loaders/PanCanDSASlideSync.ipynb
@@ -52,18 +52,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9 Potential Patient directories were identified\n"
+      "5 Potential Patient directories were identified\n",
+      "['GBM', 'LGG', 'LUAD', 'SARC', 'SKCM']\n"
      ]
     }
    ],
    "source": [
     "## This is specific to a given fle system and or structurme\n",
-    "slide_root = '/home/lcoop22/Images/'  ##Base Path for Slides\n",
-    "dsa_slide_db = client['PanCanDSA_Slide_Data']  ### These need to be configured for the specific project\n",
+    "slide_root = '/bigdata/PanCan_Images'  ##Base Path for Slides\n",
+    "dsa_slide_db = client['PanCanDSA_Slide_Data_N15']  ### These need to be configured for the specific project\n",
     "\n",
     "### To generalize this, need to describe organization, most common will be  PATIENT/STAIN_TYPE as subdirectories\n",
     "subj_dir_list = [x for x in os.listdir(slide_root) if os.path.isdir(os.path.join(slide_root,x))]\n",
-    "print len(subj_dir_list),\"Potential Patient directories were identified\""
+    "print len(subj_dir_list),\"Potential Patient directories were identified\"\n",
+    "print subj_dir_list"
    ]
   },
   {
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -100,18 +102,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['SARC']\n"
+      "['GBM', 'LGG', 'LUAD', 'SARC', 'SKCM']\n",
+      "8329\n"
      ]
     }
    ],
    "source": [
     "print subj_dir_list\n",
-    "subj_dir_list = ['SARC']"
+    "print dsa_slide_db['RawSlideData'].count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -120,9 +123,86 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SARC is being processed /home/lcoop22/Images/SARC\n",
-      "726 SVS or NDPI files were located\n",
-      "\u001b[KTotal Processed: 726  Newly Processed: 0 Dup Slides or Already Loaded: 0  RESCANNED Slides 0"
+      "GBM is being processed /bigdata/PanCan_Images/GBM\n",
+      "2567 SVS or NDPI files were located\n",
+      "\u001b[KTotal Processed: 2567  Newly Processed: 0 Dup Slides or Already Loaded: 0  RESCANNED Slides 0LGG is being processed /bigdata/PanCan_Images/LGG\n",
+      "1776 SVS or NDPI files were located\n",
+      "\u001b[KTotal Processed: 1776  Newly Processed: 0 Dup Slides or Already Loaded: 0  RESCANNED Slides 0LUAD is being processed /bigdata/PanCan_Images/LUAD\n",
+      "2116 SVS or NDPI files were located\n",
+      "\u001b[KTotal Processed: 1973  Newly Processed: 0 Dup Slides or Already Loaded: 0  RESCANNED Slides 0Openslide returned an error om tje StandardError block /bigdata/PanCan_Images/LUAD/TCGA-97-8176-01Z-00-DX1.444FE201-4F7B-47B5-8FE5-6CB31E524E6E.svs\n",
+      "SHIT IT DIED!\n",
+      "insert into `corrupt_or_unreadable_ndpi_files` (full_file_name,filesize) Values ('/bigdata/PanCan_Images/LUAD/TCGA-97-8176-01Z-00-DX1.444FE201-4F7B-47B5-8FE5-6CB31E524E6E.svs',1871901705) \n",
+      "UNABLE TO OPEN FILE?? /bigdata/PanCan_Images/LUAD/TCGA-97-8176-01Z-00-DX1.444FE201-4F7B-47B5-8FE5-6CB31E524E6E.svs\n",
+      "\u001b[KTotal Processed: 1979  Newly Processed: 0 Dup Slides or Already Loaded: 0  RESCANNED Slides 0"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Verify failed with: (\"cannot identify image file '/bigdata/PanCan_Images/LUAD/TCGA-97-8176-01Z-00-DX1.444FE201-4F7B-47B5-8FE5-6CB31E524E6E.svs'\",)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Openslide returned an error om tje StandardError block /bigdata/PanCan_Images/LUAD/TCGA-97-8547-01Z-00-DX1.873DFBAA-2875-481F-BF47-2C12B1D96CE6.svs\n",
+      "SHIT IT DIED!\n",
+      "insert into `corrupt_or_unreadable_ndpi_files` (full_file_name,filesize) Values ('/bigdata/PanCan_Images/LUAD/TCGA-97-8547-01Z-00-DX1.873DFBAA-2875-481F-BF47-2C12B1D96CE6.svs',1655573221) \n",
+      "UNABLE TO OPEN FILE?? /bigdata/PanCan_Images/LUAD/TCGA-97-8547-01Z-00-DX1.873DFBAA-2875-481F-BF47-2C12B1D96CE6.svs\n",
+      "\u001b[KTotal Processed: 1995  Newly Processed: 0 Dup Slides or Already Loaded: 0  RESCANNED Slides 0"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Verify failed with: (\"cannot identify image file '/bigdata/PanCan_Images/LUAD/TCGA-97-8547-01Z-00-DX1.873DFBAA-2875-481F-BF47-2C12B1D96CE6.svs'\",)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[KTotal Processed: 2116  Newly Processed: 0 Dup Slides or Already Loaded: 0  RESCANNED Slides 0SARC is being processed /bigdata/PanCan_Images/SARC\n",
+      "890 SVS or NDPI files were located\n",
+      "\u001b[KTotal Processed: 890  Newly Processed: 0 Dup Slides or Already Loaded: 0  RESCANNED Slides 0SKCM is being processed /bigdata/PanCan_Images/SKCM\n",
+      "983 SVS or NDPI files were located\n",
+      "\u001b[KTotal Processed: 472  Newly Processed: 0 Dup Slides or Already Loaded: 0  RESCANNED Slides 0"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dgutman/Envs/ADRCFlask/local/lib/python2.7/site-packages/Pillow-3.2.0-py2.7-linux-x86_64.egg/PIL/TiffImagePlugin.py:680: UserWarning: Possibly corrupt EXIF data.  Expecting to read 17103422048 bytes but only got 803420367. Skipping tag 12337\n",
+      "/home/dgutman/Envs/ADRCFlask/local/lib/python2.7/site-packages/Pillow-3.2.0-py2.7-linux-x86_64.egg/PIL/TiffImagePlugin.py:680: UserWarning: Possibly corrupt EXIF data.  Expecting to read 7528658466 bytes but only got 0. Skipping tag 6865\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Openslide returned an error om tje StandardError block /bigdata/PanCan_Images/SKCM/TCGA-EE-A2GC-01Z-00-DX1.34BD8445-75D9-4F14-ABE2-3A21A57427BA.svs\n",
+      "SHIT IT DIED!\n",
+      "insert into `corrupt_or_unreadable_ndpi_files` (full_file_name,filesize) Values ('/bigdata/PanCan_Images/SKCM/TCGA-EE-A2GC-01Z-00-DX1.34BD8445-75D9-4F14-ABE2-3A21A57427BA.svs',1502570805) \n",
+      "UNABLE TO OPEN FILE?? /bigdata/PanCan_Images/SKCM/TCGA-EE-A2GC-01Z-00-DX1.34BD8445-75D9-4F14-ABE2-3A21A57427BA.svs\n",
+      "\u001b[KTotal Processed: 483  Newly Processed: 0 Dup Slides or Already Loaded: 0  RESCANNED Slides 0"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Verify failed with: (\"cannot identify image file '/bigdata/PanCan_Images/SKCM/TCGA-EE-A2GC-01Z-00-DX1.34BD8445-75D9-4F14-ABE2-3A21A57427BA.svs'\",)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[KTotal Processed: 983  Newly Processed: 0 Dup Slides or Already Loaded: 0  RESCANNED Slides 0"
      ]
     }
    ],
@@ -178,8 +258,12 @@
    },
    "outputs": [],
    "source": [
-    "#dsa_slide_db['DSA_Slide_Data'].delete_many({})\n",
-    "#print dsa_slide_db['DSA_Slide_Data'].count()"
+    "\n",
+    "\n",
+    "\n",
+    "# print dsa_slide_db['RawSlideData'].count()\n",
+    "# dsa_slide_db['RawSlideData'].delete_many({})\n",
+    "# print dsa_slide_db['RawSlideData'].count()\n"
    ]
   },
   {
@@ -195,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -232,19 +316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[u'SKCM', u'SARC']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "coll_list = dsa_slide_db['PanCanDSA_Slide_Data'].distinct('slideGroup')\n",
     "print coll_list"
@@ -331,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.3"
   }
  },
  "nbformat": 4,
